--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "botbuilder": "^3.0.1",
-    "restify": "^4.1.1"
+    "geocode-wifi": "^1.0.1",
+    "geotrouvetou": "0.0.1",
+    "restify": "^4.1.1",
+    "tape": "^4.6.0"
   }
 }
