--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "botbuilder": "^3.0.1",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
-    "restify": "^4.1.1",
-    "tape": "^4.6.0"
+    "node-wifiscanner": "^0.2.1",
+    "restify": "^4.1.1"
   }
 }
