--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "botbuilder": "^3.0.1",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
-    "node-wifiscanner": "^0.2.1",
-    "restify": "^4.1.1"
+    "node-wifi-scanner": "^1.0.0",
+    "restify": "^4.1.1",
+    "sudo": "^1.0.3"
   }
 }
