--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "wdam"
   },
   "dependencies": {
+    "applicationinsights": "^0.15.17",
     "botbuilder": "^3.1.0",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
