--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
     "node-wifi-scanner": "^1.0.0",
+    "request": "^2.74.0",
     "restify": "^4.1.1",
     "sudo": "^1.0.3"
   }
