--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "applicationinsights": "^0.15.17",
     "botbuilder": "^3.1.0",
+    "buffalo": "^0.1.3",
+    "crypto": "0.0.3",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
+    "moment": "^2.14.1",
     "node-wifi-scanner": "^1.0.0",
     "request": "^2.74.0",
     "restify": "^4.1.1",
