--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "applicationinsights": "^0.15.17",
+    "audio-play": "^1.0.1",
     "botbuilder": "^3.1.0",
     "buffalo": "^0.1.3",
     "crypto": "0.0.3",
