--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "applicationinsights": "^0.15.17",
-    "audio-play": "^1.0.1",
     "botbuilder": "^3.1.0",
     "buffalo": "^0.1.3",
     "crypto": "0.0.3",
@@ -16,6 +15,7 @@
     "geotrouvetou": "0.0.1",
     "moment": "^2.14.1",
     "node-wifi-scanner": "^1.0.0",
+    "play-sound": "0.0.9",
     "request": "^2.74.0",
     "restify": "^4.1.1",
     "sudo": "^1.0.3"
