--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "botbuilder": "^3.1.0",
     "buffalo": "^0.1.3",
     "crypto": "0.0.3",
+    "edge": "^5.9.2",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
     "moment": "^2.14.1",
     "node-wifi-scanner": "^1.0.0",
-    "play-sound": "0.0.9",
     "request": "^2.74.0",
     "restify": "^4.1.1",
-    "sudo": "^1.0.3"
+    "sudo": "^1.0.3",
+    "url": "^0.11.0"
   }
 }
