--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buffalo": "^0.1.3",
     "crypto": "0.0.3",
     "edge": "^5.9.2",
+    "fibers": "^1.0.13",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
     "moment": "^2.14.1",
