--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "wdam"
   },
   "dependencies": {
-    "applicationinsights": "^0.15.17",
+    "applicationinsights": "^0.15.19",
     "botbuilder": "^3.1.0",
     "buffalo": "^0.1.3",
     "crypto": "0.0.3",
@@ -17,9 +17,12 @@
     "geotrouvetou": "0.0.1",
     "moment": "^2.14.1",
     "node-wifi-scanner": "^1.0.0",
+    "open": "0.0.5",
     "request": "^2.74.0",
+    "request-promise": "^4.1.1",
     "restify": "^4.1.1",
     "sudo": "^1.0.3",
+    "swagger-client": "^2.1.32",
     "url": "^0.11.0"
   }
 }
