--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "applicationinsights": "^0.15.19",
+    "async": "^2.4.0",
+    "async-timeout": "^1.0.2",
     "botbuilder": "^3.7.0",
     "buffalo": "^0.1.3",
     "crypto": "0.0.3",
