--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "async-timeout": "^1.0.2",
     "botbuilder": "^3.7.0",
     "buffalo": "^0.1.3",
+    "circular-json": "^0.3.1",
     "crypto": "0.0.3",
     "edge": "^6.5.1",
     "fibers": "^1.0.15",
     "geocode-wifi": "^1.0.1",
     "geotrouvetou": "0.0.1",
     "moment": "^2.18.1",
+    "node-uuid": "^1.4.8",
     "node-wifi-scanner": "^1.0.0",
     "open": "0.0.5",
+    "redis": "^2.7.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "restify": "^4.3.0",
