--- a/Web.config
+++ b/Web.config
@@ -22,13 +22,13 @@
     <modules runAllManagedModulesForAllRequests="false" />
 
     <!-- Web.Debug.config adds attributes to this to enable remote debugging when publishing in Debug configuration. -->
-    <iisnode watchedFiles="web.config;*.js"/>
+    <!--  <iisnode watchedFiles="web.config;*.js"/>   -->
 
     <!-- Remote debugging (Azure Website with git deploy): Comment out iisnode above, and uncomment iisnode below. -->
-    <!--<iisnode watchedFiles="web.config;*.js"
+    <iisnode watchedFiles="web.config;*.js"
       loggingEnabled="true"
       devErrorsEnabled="true"
-      nodeProcessCommandLine="node.exe &#45;&#45;debug"/>-->
+      nodeProcessCommandLine="node.exe &#45;&#45;debug"/>
 
     <!-- indicates that the server.js file is a Node.js application 
     to be handled by the iisnode module -->
@@ -37,16 +37,16 @@
 
       <!-- Remote debugging (Azure Website with git deploy): Uncomment NtvsDebugProxy handler below.
       Additionally copy Microsoft.NodejsTools.WebRole to 'bin' from the Remote Debug Proxy folder.-->
-      <!--<add name="NtvsDebugProxy" path="ntvs-debug-proxy/655ec4e3-8cd9-4977-9b91-8acb0ca25d49" verb="*" resourceType="Unspecified"
-        type="Microsoft.NodejsTools.Debugger.WebSocketProxy, Microsoft.NodejsTools.WebRole"/>-->
+      <add name="NtvsDebugProxy" path="ntvs-debug-proxy/655ec4e3-8cd9-4977-9b91-8acb0ca25d49" verb="*" resourceType="Unspecified"
+        type="Microsoft.NodejsTools.Debugger.WebSocketProxy, Microsoft.NodejsTools.WebRole"/>
     </handlers>
     <rewrite>
       <rules>
         <clear />
         <!-- Remote debugging (Azure Website with git deploy): Uncomment the NtvsDebugProxy rule below. -->
-        <!--<rule name="NtvsDebugProxy" enabled="true" stopProcessing="true">
+        <rule name="NtvsDebugProxy" enabled="true" stopProcessing="true">
           <match url="^ntvs-debug-proxy/.*"/>
-        </rule>-->
+        </rule>
         <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="iisnode.+" negate="true" />
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
@@ -57,8 +57,8 @@
   </system.webServer>
 
   <!-- Remote debugging (Azure Website with git deploy): uncomment system.web below -->
-  <!--<system.web>
+  <system.web>
     <httpRuntime targetFramework="4.5"/>
     <customErrors mode="Off"/>
-  </system.web>-->
+  </system.web>
 </configuration>
