change web.config rule

--- a/Web.config
+++ b/Web.config
@@ -44,7 +44,9 @@
           <match url="^ntvs-debug-proxy/.*"/>
         </rule> -->
         <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="iisnode.+" negate="true" />
+          <!-- change url to /* t osee both iisnode and redis has the rewrite access-->
+          <!-- <match url="iisnode.+" negate="true" />  -->
+          <match url="/*+" negate="true" />
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
           <action type="Rewrite" url="app.js" />
         </rule>
