--- a/Web.config
+++ b/Web.config
@@ -45,9 +45,10 @@
         </rule> -->
         <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
           <!-- change url to /* t osee both iisnode and redis has the rewrite access-->
-          <!-- <match url="iisnode.+" negate="true" />  -->
+          <!-- <match url="iisnode.+" negate="true" />
           <match url="/*+" negate="true" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="false" /> -->
+          <match url="/*"/>
           <action type="Rewrite" url="app.js" />
         </rule>
       </rules>
