--- a/Web.config
+++ b/Web.config
@@ -51,7 +51,7 @@
         <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="iisnode.+" negate="true" />
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-          <action type="Rewrite" url="server.js" />
+          <action type="Rewrite" url="app.js" />
         </rule>
       </rules>
     </rewrite>
