--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "async": "^2.4.0",
     "async-timeout": "^1.0.2",
     "botbuilder": "^3.7.0",
+    "botbuilder-calling": "^3.0.1",
     "buffalo": "^0.1.3",
     "circular-json": "^0.3.1",
     "crypto": "0.0.3",
