--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async-timeout": "^1.0.2",
     "botbuilder": "^3.7.0",
     "botbuilder-calling": "^3.0.1",
+    "botbuilder-wechat-connector": "^1.0.2",
     "buffalo": "^0.1.3",
     "circular-json": "^0.3.1",
     "crypto": "0.0.3",
